--- a/app/popup.html
+++ b/app/popup.html
@@ -9,9 +9,20 @@
     <!-- build:css styles/main.css -->
     <link href="styles/main.css" rel="stylesheet">
     <!-- endbuild -->
+    <style>
+      body {
+        min-width: 250px; /* your desired width */
+        max-width: 100%;
+      }
+    </style>
   </head>
   <body>
     <h1>斗鱼插件</h1>
+
+    <div>
+      <button id="stop">Hello</button>
+    </div>
+
 
     <!-- build:js scripts/popup-vendor.js -->
     <!-- bower:js -->
