--- a/app/options.html
+++ b/app/options.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="utf-8">
     <!-- build:css styles/options-vendor.css -->
     <!-- bower:css -->
     <!-- endbower -->
@@ -11,6 +12,8 @@
   </head>
   <body>
     <h1>斗鱼插件</h1>
+
+    <p> options</p>
 
     <!-- build:js scripts/options-vendor.js -->
     <!-- bower:js -->
