--- a/app/popup.html
+++ b/app/popup.html
@@ -20,12 +20,13 @@
     <h1>斗鱼插件</h1>
 
     <div>
-      <button id="stop">Hello</button>
+      <button id="send">Hello</button>
     </div>
 
 
     <!-- build:js scripts/popup-vendor.js -->
     <!-- bower:js -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
