--- a/app/options.html
+++ b/app/options.html
@@ -17,6 +17,7 @@
 
     <!-- build:js scripts/options-vendor.js -->
     <!-- bower:js -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
