--- a/app/options.html
+++ b/app/options.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <!-- build:css styles/options-vendor.css -->
     <!-- bower:css -->
+    <link href="styles/layui.css" rel="stylesheet">
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css styles/main.css -->
@@ -11,13 +12,12 @@
     <!-- endbuild -->
   </head>
   <body>
-    <h1>斗鱼插件</h1>
-
-    <p> options</p>
+    <p> 设置</p>
 
     <!-- build:js scripts/options-vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="js/layui.all.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
