--- a/app/options.html
+++ b/app/options.html
@@ -12,7 +12,30 @@
     <!-- endbuild -->
   </head>
   <body>
-    <p> 设置</p>
+  <fieldset class="layui-elem-field layui-field-title" style="margin-top: 0;">
+    <legend>图灵机器人</legend>
+  </fieldset>
+  <form class="layui-form" action="">
+    <div class="layui-form-item">
+      <label class="layui-form-label">apikey</label>
+      <div class="layui-input-block">
+        <input type="text" id="apikey" name="apikey" lay-verify="required" autocomplete="off" placeholder="请输入apikey" class="layui-input">
+      </div>
+    </div>
+    <div class="layui-form-item">
+      <label class="layui-form-label">密钥</label>
+      <div class="layui-input-block">
+        <input type="text" id="secret" name="secret" lay-verify="required"  placeholder="请输入密钥" autocomplete="off" class="layui-input">
+      </div>
+    </div>
+
+    <div class="layui-form-item">
+      <div class="layui-input-block">
+        <button class="layui-btn" lay-submit="" lay-filter="save">保存</button>
+        <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+      </div>
+    </div>
+  </form>
 
     <!-- build:js scripts/options-vendor.js -->
     <!-- bower:js -->
