图灵机器人

--- a/app/options.html
+++ b/app/options.html
@@ -23,9 +23,9 @@
       </div>
     </div>
     <div class="layui-form-item">
-      <label class="layui-form-label">密钥</label>
+      <label class="layui-form-label">userId</label>
       <div class="layui-input-block">
-        <input type="text" id="secret" name="secret" lay-verify="required"  placeholder="请输入密钥" autocomplete="off" class="layui-input">
+        <input type="text" id="userId" name="userId" lay-verify="required"  placeholder="请输入userId" autocomplete="off" class="layui-input">
       </div>
     </div>
 
