--- a/app/popup.html
+++ b/app/popup.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html>
+<html lang="zh_CN">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv='content-type' content='text/html;charset=UTF-8' />
     <!-- build:css styles/popup-vendor.css -->
     <!-- bower:css -->
+    <link href="styles/layui.css" rel="stylesheet">
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css styles/main.css -->
@@ -20,13 +22,33 @@
     <h1>斗鱼插件</h1>
 
     <div>
-      <button id="send">Hello</button>
+      <button class="layui-btn" id="send">开始</button>
     </div>
 
+    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+      <legend>图灵机器人测试</legend>
+    </fieldset>
+
+    <form class="layui-form" action="">
+
+      <div class="layui-form-item layui-form-text">
+        <label class="layui-form-label">信息框</label>
+        <div class="layui-input-block">
+          <textarea name="message" placeholder="请输入内容" class="layui-textarea"></textarea>
+        </div>
+      </div>
+      <div class="layui-form-item">
+        <button class="layui-btn" lay-submit="" lay-filter="chat">发送</button>
+      </div>
+      <div id="chat-content" class="layui-row">
+
+      </div>
+    </form>
 
     <!-- build:js scripts/popup-vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="js/layui.all.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
